--- a/overlay-lineage/packages/apps/Snap/res/values/config.xml
+++ b/overlay-lineage/packages/apps/Snap/res/values/config.xml
@@ -16,5 +16,11 @@
 <resources>
     <!-- Enable support for bokeh mode -->
     <bool name="support_bokeh_mode">true</bool>
+
+    <!-- Opens back camera using openLegacy() -->
+    <bool name="back_camera_open_legacy">false</bool>
+
+    <!-- Opens front camera using openLegacy() -->
+    <bool name="front_camera_open_legacy">false</bool>
 </resources>
 
