--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -20,7 +20,7 @@
          brightness changes occur in response to an observed change in light level that exceeds the
          hysteresis threshold. -->
      <integer name="config_autoBrightnessBrighteningLightDebounce">2000</integer>
-     <integer name="config_autoBrightnessDarkeningLightDebounce">2000</integer>
+     <integer name="config_autoBrightnessDarkeningLightDebounce">4000</integer>
 
     <!-- Array of light sensor LUX values to define our levels for auto backlight brightness support.
          The N entries of this array define N  1 zones as follows:
@@ -35,26 +35,20 @@
         <item>2</item>
         <item>3</item>
         <item>4</item>
-        <item>5</item>
-        <item>6</item>
         <item>8</item>
-        <item>13</item>
-        <item>17</item>
-        <item>21</item>
-        <item>26</item>
-        <item>30</item>
-        <item>34</item>
-        <item>140</item>
-        <item>310</item>
-        <item>400</item>
-        <item>500</item>
-        <item>600</item>
-        <item>1000</item>
-        <item>1200</item>
-        <item>1500</item>
-        <item>3000</item>
-        <item>3500</item>
-        <item>4000</item>
+        <item>12</item>
+        <item>20</item>
+        <item>33</item>
+        <item>55</item>
+        <item>90</item>
+        <item>148</item>
+        <item>245</item>
+        <item>403</item>
+        <item>665</item>
+        <item>1097</item>
+        <item>1808</item>
+        <item>2981</item>
+        <item>5000</item>
     </integer-array>
 
     <!-- Array of desired screen brightness in nits corresponding to the lux values
@@ -69,25 +63,25 @@
          array. The brightness values must be non-negative and non-decreasing. This must be
          overridden in platform specific overlays -->
     <array name="config_autoBrightnessDisplayValuesNits">
-        <item>7.702998</item>
-        <item>32.31226</item>
-        <item>38.786167</item>
-        <item>43.30993</item>
-        <item>46.851162</item>
-        <item>55.90478</item>
-        <item>61.334614</item>
-        <item>68.4388</item>
-        <item>75.59099</item>
-        <item>82.8686</item>
-        <item>91.49397</item>
-        <item>102.49851</item>
-        <item>118.8174</item>
-        <item>144.68486</item>
-        <item>180.69225</item>
-        <item>225.84135</item>
-        <item>292.46844</item>
-        <item>377.05084</item>
-        <item>481.93427</item>
+        <item>14.22825</item>   <!-- 0-1 -->
+        <item>17.92821</item>   <!-- 1-2 -->
+        <item>21.0392</item>    <!-- 2-3 -->
+        <item>23.454172</item>  <!-- 3-4 -->
+        <item>25.448406</item>  <!-- 4-8 -->
+        <item>31.200361</item>  <!-- 8-12 -->
+        <item>35.231995</item>  <!-- 12-20 -->
+        <item>41.076897</item>  <!-- 20-33 -->
+        <item>47.72592</item>   <!-- 33-55 -->
+        <item>55.562805</item>  <!-- 55-90 -->
+        <item>64.97754</item>   <!-- 90-148 -->
+        <item>77.0652</item>    <!-- 148-245 -->
+        <item>94.4501</item>    <!-- 245-403 -->
+        <item>117.607216</item> <!-- 403-665 -->
+        <item>149.78299</item>  <!-- 665-1097 -->
+        <item>197.58708</item>  <!-- 1097-1808 -->
+        <item>254.74942</item>  <!-- 1808-2981 -->
+        <item>320.71716</item>  <!-- 2981-5000 -->
+        <item>395.74274</item>  <!-- 5000+ -->
     </array>
 
     <!-- An array describing the screen's backlight values corresponding to the brightness
@@ -95,71 +89,22 @@
          This array should be equal in size to config_screenBrightnessBacklight. -->
     <integer-array name="config_screenBrightnessBacklight">
         <item>1</item>
-        <item>2</item>
-        <item>3</item>
-        <item>4</item>
-        <item>5</item>
-        <item>6</item>
-        <item>7</item>
-        <item>8</item>
-        <item>9</item>
-        <item>10</item>
-        <item>11</item>
-        <item>12</item>
-        <item>13</item>
-        <item>14</item>
         <item>15</item>
-        <item>16</item>
-        <item>17</item>
-        <item>18</item>
-        <item>19</item>
-        <item>20</item>
-        <item>25</item>
         <item>30</item>
-        <item>35</item>
-        <item>40</item>
         <item>45</item>
-        <item>50</item>
-        <item>55</item>
         <item>60</item>
-        <item>65</item>
-        <item>70</item>
         <item>75</item>
-        <item>80</item>
-        <item>85</item>
         <item>90</item>
-        <item>95</item>
-        <item>100</item>
         <item>105</item>
-        <item>110</item>
-        <item>115</item>
         <item>120</item>
-        <item>125</item>
-        <item>130</item>
         <item>135</item>
-        <item>140</item>
-        <item>145</item>
         <item>150</item>
-        <item>155</item>
-        <item>160</item>
         <item>165</item>
-        <item>170</item>
-        <item>175</item>
         <item>180</item>
-        <item>185</item>
-        <item>190</item>
         <item>195</item>
-        <item>200</item>
-        <item>205</item>
         <item>210</item>
-        <item>215</item>
-        <item>220</item>
         <item>225</item>
-        <item>230</item>
-        <item>235</item>
         <item>240</item>
-        <item>245</item>
-        <item>250</item>
         <item>255</item>
     </integer-array>
 
@@ -170,73 +115,24 @@
          brightness modes but only the maximum brightness value obtainable in a sustainable manner.
          This array should be equal in size to config_screenBrightnessBacklight -->
     <array name="config_screenBrightnessNits">
-        <item>2.685</item>
-        <item>3.343</item>
-        <item>4.13</item>
-        <item>5.216</item>
-        <item>6.308</item>
-        <item>7.565</item>
-        <item>9.269</item>
-        <item>10.98</item>
-        <item>13.25</item>
-        <item>15.49</item>
-        <item>18.42</item>
-        <item>20.6</item>
-        <item>22.71</item>
-        <item>24.68</item>
-        <item>26.31</item>
-        <item>28.39</item>
-        <item>30.34</item>
-        <item>32.39</item>
-        <item>33.94</item>
-        <item>35.94</item>
-        <item>45.12</item>
-        <item>54</item>
-        <item>62.31</item>
-        <item>70.73</item>
-        <item>78.85</item>
-        <item>86.41</item>
-        <item>93.53</item>
-        <item>102.3</item>
-        <item>109.1</item>
-        <item>118.7</item>
-        <item>126.4</item>
-        <item>136.9</item>
-        <item>147.8</item>
-        <item>158.9</item>
-        <item>168.3</item>
-        <item>177.4</item>
-        <item>186.6</item>
-        <item>195.7</item>
-        <item>204.5</item>
-        <item>214</item>
-        <item>221.8</item>
-        <item>234</item>
-        <item>242.1</item>
-        <item>250.6</item>
-        <item>263.4</item>
-        <item>272.4</item>
-        <item>282.5</item>
-        <item>296.3</item>
-        <item>305.6</item>
-        <item>315.3</item>
-        <item>329.8</item>
-        <item>339.8</item>
-        <item>349.7</item>
-        <item>357.4</item>
-        <item>364.6</item>
-        <item>374.6</item>
-        <item>384.9</item>
-        <item>392.5</item>
-        <item>402.8</item>
-        <item>413.6</item>
-        <item>421.6</item>
-        <item>432.2</item>
-        <item>440.3</item>
-        <item>448.3</item>
-        <item>459.2</item>
-        <item>467.6</item>
-        <item>478.5</item>
+        <item>1.74</item>
+        <item>26.11</item>
+        <item>50.5</item>
+        <item>74.17</item>
+        <item>96.89</item>
+        <item>118.3</item>
+        <item>139.8</item>
+        <item>162.9</item>
+        <item>189.8</item>
+        <item>217.4</item>
+        <item>240.4</item>
+        <item>265.3</item>
+        <item>288.7</item>
+        <item>316</item>
+        <item>340.8</item>
+        <item>357.9</item>
+        <item>376.2</item>
+        <item>392.9</item>
     </array>
 
     <!-- Whether a software navigation bar should be shown. NOTE: in the future this may be
